...
    private var estimatedProgressObservation: NSKeyValueObservation?
    
    // MARK: - Override funcs
    override func viewDidLoad() {
        super.viewDidLoad()
        
        webView.accessibilityIdentifier = "WebViewUnsplash"
        webView.navigationDelegate = self
        
        presenter?.viewDidLoad()
        
        estimatedProgressObservation = webView.observe(
            \.estimatedProgress,
...
